2013-11-24  Julien Bect  <julien.bect@supelec.fr>

	Add documentation for stk_select_optimizer.

	* misc/config/stk_select_optimizer.m: modified

2013-11-22  Julien Bect  <julien.bect@supelec.fr>

	Add a new example.

	* examples/01_kriging_basics/stk_example_kb07.m: new script

2013-11-19  Julien Bect  <julien.bect@supelec.fr>

	Change plot options in example 'doe01'.

	* examples/02_design_of_experiments/stk_example_doe01.m: modified

	Add a smoke test of all examples.

	* misc/test/stk_runexamples.m: modified

2013-11-18  Julien Bect  <julien.bect@supelec.fr>

	Remove TRUE_NOISE_STD in example 'kb03'.

	* examples/01_kriging_basics/stk_example_kb03.m: modified

	Use the variance returned by stk_param_init for noiseless data.

	* examples/01_kriging_basics/stk_example_kb02.m: modified
	* examples/01_kriging_basics/stk_example_kb03.m: modified

2013-11-15  Julien Bect  <julien.bect@supelec.fr>

	Remove stk_plot1dsim.

	* misc/plot/stk_plot1dsim.m: removed
	* misc/plot/stk_plot1d.m: modified
	* examples/01_kriging_basics/stk_example_kb05.m: modified

2013-11-14  Julien Bect  <julien.bect@supelec.fr>

	Rewrite one-line descriptions of all examples.

	* examples/01_kriging_basics/stk_example_kb01.m: modified
	* examples/01_kriging_basics/stk_example_kb02.m: modified
	* examples/01_kriging_basics/stk_example_kb03.m: modified
	* examples/01_kriging_basics/stk_example_kb04.m: modified
	* examples/01_kriging_basics/stk_example_kb05.m: modified
	* examples/01_kriging_basics/stk_example_kb06.m: modified
	* examples/02_design_of_experiments/stk_example_doe01.m: modified
	* examples/02_design_of_experiments/stk_example_doe02.m: modified
	* examples/02_design_of_experiments/stk_example_doe03.m: modified
	* examples/03_miscellaneous/stk_example_misc01.m: modified
	* examples/03_miscellaneous/stk_example_misc02.m: modified

	Rewrite the description of example 'kb02'.

	* examples/01_kriging_basics/stk_example_kb02.m: modified

2013-11-12  Julien Bect  <julien.bect@supelec.fr>
